src/snapshots/squawk__parse__tests__truncate_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: TruncateStmt(
                    Object({
                        "behavior": Number(
                            0,
                        ),
                        "relations": Array([
                            Object({
                                "RangeVar": Object({
                                    "inh": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        10,
                                    ),
                                    "relname": String(
                                        "bigtable",
                                    ),
                                    "relpersistence": String(
                                        "p",
                                    ),
                                }),
                            }),
                            Object({
                                "RangeVar": Object({
                                    "inh": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        20,
                                    ),
                                    "relname": String(
                                        "fattable",
                                    ),
                                    "relpersistence": String(
                                        "p",
                                    ),
                                }),
                            }),
                            Object({
                                "RangeVar": Object({
                                    "inh": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        30,
                                    ),
                                    "relname": String(
                                        "bar",
                                    ),
                                    "relpersistence": String(
                                        "p",
                                    ),
                                }),
                            }),
                        ]),
                        "restart_seqs": Bool(
                            true,
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    50,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: TruncateStmt(
                    Object({
                        "behavior": Number(
                            1,
                        ),
                        "relations": Array([
                            Object({
                                "RangeVar": Object({
                                    "inh": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        61,
                                    ),
                                    "relname": String(
                                        "foo",
                                    ),
                                    "relpersistence": String(
                                        "p",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 51,
                stmt_len: Some(
                    21,
                ),
            },
        ),
    ],
)
