src/snapshots/squawk__parse__tests__unlisten_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: UnlistenStmt(
                    Object({
                        "conditionname": String(
                            "virtual",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    17,
                ),
            },
        ),
    ],
)
