src/snapshots/squawk__parse__tests__vacuum_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: VacuumStmt(
                    Object({
                        "options": Number(
                            7,
                        ),
                        "relation": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    27,
                                ),
                                "relname": String(
                                    "foo",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    30,
                ),
            },
        ),
    ],
)
